[package]
name = "whr"
version = "0.1.0"
authors = ["Karolis Rusenas <karolis.rusenas@gmail.com>"]
edition = "2018"
description = "Library for running functions on Webhook Relay"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"
base64 = "0.11.0"